// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthPresenter creates presenter with defaults 1`] = `
Object {
  "request": Object {
    "error": null,
    "isPending": false,
    "isSucceed": false,
  },
  "token": Object {
    "accessKey": "",
    "userId": "",
  },
}
`;

exports[`AuthPresenter fail token refresh 1`] = `
Object {
  "request": Object {
    "error": [Error: Boom!!!],
    "isPending": false,
    "isSucceed": false,
  },
  "token": Object {
    "accessKey": "",
    "userId": "",
  },
}
`;

exports[`AuthPresenter starts refresh token 1`] = `
Object {
  "request": Object {
    "error": null,
    "isPending": true,
    "isSucceed": false,
  },
  "token": Object {
    "accessKey": "",
    "userId": "",
  },
}
`;

exports[`AuthPresenter updates token 1`] = `
Object {
  "request": Object {
    "error": null,
    "isPending": false,
    "isSucceed": true,
  },
  "token": Object {
    "accessKey": "zzzzzz",
    "userId": "dfdfdf",
  },
}
`;
